--- a/Javascript/RockPaperScissor/index.html
+++ b/Javascript/RockPaperScissor/index.html
@@ -4,26 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-    .buttons {
-      margin: 20px;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #result {
-      margin-top: 20px;
-      font-size: 18px;
-    }
-  </style>
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
@@ -32,7 +12,9 @@
     <button data-choice="paper">Paper</button>
     <button data-choice="scissors">Scissors</button>
   </div>
+  <div id="score">Player: 0 | Computer: 0</div>
   <div id="result"></div>
+  <button id="reset">Reset Game</button>
   <script src="index.js"></script>
 </body>
 </html>
