--- a/Javascript/Whac-a-mole/index.html
+++ b/Javascript/Whac-a-mole/index.html
@@ -21,6 +21,7 @@
         <div class="square" id="7"></div>
         <div class="square" id="8"></div>
         <div class="square" id="9"></div>
+        <button id="reset-btn">Reset</button>
     </div>
     <script src="script.js"></script>
 </body>
