--- a/Javascript/Breakout/index.html
+++ b/Javascript/Breakout/index.html
@@ -11,7 +11,7 @@
     <div class="grid">
         <!-- <div class="block"></div> -->
     </div>
-
+    <button id="reset">reset</button>
     <script src="script.js"></script>
 </body>
 </html>
